# django_forms_plus

./: .editorconfig  .gitignore  CHANGELOG.md  Makefile  README.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json  webpack.config.js
dev_site/: manage.py
dev_site/apex/: apps.py  urls.py  views.py
dev_site/apex/migrations/: 0001_initial.py  0002_profile_has_middle_name.py  0003_customer_privatedata.py  0004_alter_privatedata_age_alter_privatedata_vat.py  0005_recipient.py
dev_site/apex/misc/: __init__.py  captcha.py
dev_site/apex/models/: __init__.py  customer.py  profile.py
dev_site/apex/static/apex/: styles.css
dev_site/apex/templates/apex/: index.html
dev_site/blog_old/: apps.py  urls.py  views.py
dev_site/blog_old/forms/: __init__.py  reset_pwd.py
dev_site/blog_old/templates/blog/: index.html
dev_site/blog_react/: apps.py  urls.py
dev_site/blog_react/forms/: __init__.py  contact_form.py  customer_form.py  profile_form.py
dev_site/blog_react/misc/: __init__.py
dev_site/blog_react/templates/blog_react/: confirm_delete.html  customer_list.html  form.html  profile_list.html
dev_site/blog_react/views/: __init__.py  contacts.py  customer.py  profile.py  recipient.py
dev_site/dev-env/: .editorconfig  Makefile  docker-compose.yml
dev_site/mysite/: settings.py  urls.py
dev_site/templates/: base.html
django_forms_plus/: __init__.py  apps.py  errors.py  fields.py  form_helper.py  forms.py  layout.py  response.py  spec.py  types.py  views.py  widgets.py
docs/: index.md
docs/.build/: build-css.py  css.yml
docs/.django-templates/: clearable_file_input.html
docs/.hidden/: TODO.md  modelform-meta.md  release.md  types.md
docs/examples/: 01-basic.md
docs/user-guide/: alternatives.md  composite.md  conditinal-logic.md  css-customization.md  css.md  debug.md  dependencies.md  form-meta.md  js-api.md  misc.md  response-actions.md  validation.md  widgets.md
front/src/: dev.js  dist.tsx  parts.js
front/src/components/: debug.js  debug.tsx  error.js  error.tsx  field-file.tsx  fields.js  fields.tsx  fieldset.js  fieldset.tsx  fieldslot.js  fieldslot.tsx  form.js  form.tsx  layout.js  layout.tsx  messages.js  messages.tsx
front/src/inc/: conditional-logic.js  conditional-logic.tsx  constants.tsx  context.js  context.tsx  hooks.tsx  i18n.js  i18n.tsx  init.js  init.tsx  submit.js  submit.tsx  utils.tsx  validation-soft.js  validation-soft.tsx  validation-superstruct.js  validation-yup.js  validation-yup.tsx
front/src/types/: index.js  index.tsx
tests/: test_example.py
